--- a/OnlineVisaCenter/src/main/webapp/registration.html
+++ b/OnlineVisaCenter/src/main/webapp/registration.html
@@ -8,12 +8,12 @@
     angular.module('reg', [])
         .controller('register',function($scope, $http, $window) {
             $scope.regUser = function(user){
-                console.log(user);
                 $http.post('http://localhost:8888/register', user)
                     .then(function () {
                         $window.location.href = "/client_page.html";
                     }).catch(function (reason) {
-                        $scope.message = reason.data.text;
+                        $scope.errorMessage = reason.data.errorMessage;
+                        $scope.errors = reason.data.errors;
                         $scope.messageBool = true;
                     });
             };
@@ -36,7 +36,8 @@
         </tr>
     </table>
     <input type="submit"/>
-    <h3 ng-show="messageBool">{{message}}</h3>
+    <h3 ng-show="messageBool">{{errorMessage}}</h3>
+    <h3 ng-repeat="error in errors" ng-show="messageBool">{{error}}</h3>
 </form>
 </div>
 </body>
