--- a/OnlineVisaCenter/src/main/webapp/document_types.html
+++ b/OnlineVisaCenter/src/main/webapp/document_types.html
@@ -14,7 +14,8 @@
         </tr>
     </table>
     <input type="submit"/>
-    <h3 ng-show="messageBool">{{message}}</h3>
+    <h3 ng-show="messageBool">{{errorMessage}}</h3>
+    <h3 ng-repeat="error in errors" ng-show="messageBool">{{error}}</h3>
 </form>
 
 <br/>
