--- a/OnlineVisaCenter/src/main/webapp/employees.html
+++ b/OnlineVisaCenter/src/main/webapp/employees.html
@@ -1,48 +1,12 @@
-<html ng-app="admin">
+<html ng-app="visa_center">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<script>
-    angular.module('admin', [])
-        .controller('admin_page',function($scope, $http, $window) {
-            $scope.addEmployee = function(user){
-                $http.post('http://localhost:8888/admin/add_employee', user)
-                    .then(function () {
-                        $window.location.href = "/employees.html";
-                    }).catch(function (reason) {
-                    $scope.errorMessage = reason.data.errorMessage;
-                    $scope.errors = reason.data.errors;
-                    $scope.messageBool = true;
-                });
-            };
-            $scope.getRoles = function(){
-                $http.get('http://localhost:8888/admin/get_roles')
-                    .then(function (response) {
-                        $scope.roles = response.data;
-                    }).catch(function (reason) {
-                });
-            };
-            $scope.getAllEmployees = function(){
-                $http.get('http://localhost:8888/admin/get_employees')
-                    .then(function (response) {
-                        $scope.employees = response.data;
-                    }).catch(function (reason) {
-                });
-            };
-            $scope.deleteEmployee = function(employeeId){
-                $http.delete('http://localhost:8888/admin/delete_employee/'+employeeId)
-                    .then(function (response) {
-                        $window.location.href = "/employees.html";
-                    }).catch(function (reason) {
-                });
-            };
-
-        });
-</script>
+<script src="application_controller.js"></script>
 <head>
     <title>All Users</title>
 </head>
 <body>
 
-<form ng-controller="admin_page"  data-ng-init="getRoles()" ng-submit="addEmployee(user)">
+<form ng-controller="application_controller"  data-ng-init="getRoles()" ng-submit="addEmployee(user)">
     <table style="with: 50%">
         <tr>
             <td>Login</td>
