--- a/OnlineVisaCenter/src/main/webapp/login_page.html
+++ b/OnlineVisaCenter/src/main/webapp/login_page.html
@@ -1,45 +1,24 @@
-<html ng-app="logIn">
+<html ng-app="visa_center">
 <head>
     <meta charset="UTF-8">
     <title>Log In</title>
 </head>
 <body>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<script>
-    angular.module('logIn', [])
-        .controller('login',function($scope, $http, $window) {
-            $scope.logUser = function(user){
-                $http.post('http://localhost:8888/login', user)
-                    .then(function (response) {
-                        if (angular.equals(response.data.role,"ADMIN")){
-                            $window.location.href = "/admin_page.html";
-                        } else if(angular.equals(response.data.role,"EMPLOYEE")){
-                            $window.location.href = "/employee_page.html";
-                        }else {
-                            $window.location.href = "/client_page.html";
-                        }
-                    }).catch(function (reason) {
-                    $scope.errorMessage = reason.data.errorMessage;
-                    $scope.errors = reason.data.errors;
-                    $scope.messageBool = true;
-                });
-            };
-
-        });
-</script>
-<div ng-controller="login">
+<script src="application_controller.js"></script>
+<div ng-controller="application_controller">
     <form ng-submit="logUser(user)">
         <table >
             <tr>
                 <td>Login</td>
-                <td><input ng-model="user.login"  type="text"/></td>
+                <td><input ng-model="user.login"  name="login" type="text"/></td>
             </tr>
             <tr>
                 <td>Password</td>
-                <td><input ng-model="user.password" type="password"/></td>
+                <td><input ng-model="user.password" name="password" type="password"/></td>
             </tr>
         </table>
-        <input type="submit"/>
+        <input value="Login" type="submit"/>
         <h3 ng-show="messageBool">{{errorMessage}}</h3>
         <h3 ng-repeat="error in errors" ng-show="messageBool">{{error}}</h3>
     </form>
