--- a/OnlineVisaCenter/src/main/webapp/employees.html
+++ b/OnlineVisaCenter/src/main/webapp/employees.html
@@ -36,7 +36,7 @@
 <h3>All Employees</h3>
 <br/>
 
-<div ng-controller="admin_page" data-ng-init='getAllEmployees()'>
+<div ng-controller="application_controller" data-ng-init='getAllEmployees()'>
     <table ng-repeat="employee in employees">
         <tr>
             <td>Login</td>
