--- a/OnlineVisaCenter/src/main/webapp/admin_page.html
+++ b/OnlineVisaCenter/src/main/webapp/admin_page.html
@@ -8,7 +8,7 @@
 <a href="employees.html">Manage users</a><br/>
 <br/>
 <br/>
-<div ng-controller="application_controller">
+<div ng-controller="application_controller" data-ng-init="getRoles()">
 <button ng-click="LogOut()" >Log out</button>
 </div>
 </body>
