--- a/OnlineVisaCenter/src/main/webapp/client_page.html
+++ b/OnlineVisaCenter/src/main/webapp/client_page.html
@@ -4,7 +4,7 @@
 <head>
     <title>Main Page</title>
 </head>
-<div ng-controller="application_controller"></div>
+<div ng-controller="application_controller" data-ng-init="getAimsOfVisit()"></div>
 <body>
     <a href="/compose_application.html">Compose application</a>
 
