--- a/OnlineVisaCenter/src/main/webapp/employee_page.html
+++ b/OnlineVisaCenter/src/main/webapp/employee_page.html
@@ -14,7 +14,7 @@
 <a href="visas.html">Manage visas</a><br/>
 <br/>
 <br/>
-<div ng-controller="application_controller">
+<div ng-controller="application_controller" data-ng-init="getStatuses()">
     <button ng-click="LogOut()" >Log out</button>
 </div>
 </body>
