add bootstrap css and jss to web pages

--- a/OnlineVisaCenter/src/main/webapp/admin_page.html
+++ b/OnlineVisaCenter/src/main/webapp/admin_page.html
@@ -5,11 +5,7 @@
     <title>Admin Page</title>
 </head>
 <body>
-<a href="employees.html">Manage users</a><br/>
-<br/>
-<br/>
-<div ng-controller="application_controller" data-ng-init="getRoles()">
-<button ng-click="LogOut()" >Log out</button>
+<div ng-include="'admin_navbar.html'">
 </div>
 </body>
 </html>
