--- a/OnlineVisaCenter/src/main/webapp/compose_application.html
+++ b/OnlineVisaCenter/src/main/webapp/compose_application.html
@@ -7,93 +7,130 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 <script src="application_controller.js"></script>
 <body>
-<form ng-controller="application_controller" data-ng-init='getCountry(); getAimsOfVisit()' ng-submit="addApplication(application)">
-    <table>
-        <tr>
-            <td>Choose Country</td>
-            <td>
-                <select ng-change="getVisaByCountryId(selectedCountry.id)" ng-model="selectedCountry" ng-options="c.name for c in countries"></select >
-            </td>
-        </tr>
-        <tr ng-show="visaBool">
-            <td>Choose Visa</td>
-            <td>
-                <select ng-change="infoBool=true; getVisa(application.visaInfo.visaId)" ng-model="application.visaInfo.visaId">
+<div ng-include="'client_navbar.html'"></div>
+<br/>
+<form  ng-controller="application_controller" data-ng-init='getCountry(); getAimsOfVisit()' ng-submit="addApplication(application)">
+
+    <div class="row justify-content-center">
+        <div class="row col-10">
+            <div class="col-4">
+                <label class="label_margin" for="inlineFormCustomSelectCountry">Country:</label>
+                <select class="custom-select margin_app" id="inlineFormCustomSelectCountry" ng-change="getVisaByCountryId(selectedCountry.id)" ng-model="selectedCountry" ng-options="c.name for c in countries"></select >
+            </div>
+
+            <div class="col-4">
+                <label class="label_margin" for="inlineFormCustomSelectVisa">Visa type:</label>
+                <select  class="custom-select margin_app" id="inlineFormCustomSelectVisa" ng-change="getVisa(application.visaInfo.visaId)" ng-model="application.visaInfo.visaId">
                     <option ng-repeat="v in visas" value="{{v.id}}">{{v.type}}</option>
                 </select >
-            </td>
-        </tr>
-    </table>
-    <table ng-show="infoBool">
-        <tr>
-            <td>Name</td>
-            <td><input ng-model="application.clientInfo.name"/></td>
-        </tr>
-        <tr>
-            <td>Surname</td>
-            <td><input ng-model="application.clientInfo.surname"/></td>
-        </tr>
-        <tr>
-            <td>Sex</td>
-            <td><input ng-model="application.clientInfo.sex" type="radio" value="M"/>M</td>
-            <td><input ng-model="application.clientInfo.sex" type="radio" value="W"/>W</td>
-        </tr>
-        <tr>
-            <td>Phone number</td>
-            <td><input ng-model="application.clientInfo.phoneNumber"/></td>
-        </tr>
-        <tr>
-            <td>Date of Birth</td>
-            <td><input ng-model="application.clientInfo.dateOfBirth" type="date"/></td>
-        </tr>
-        <tr>
-            <td>Aim of Visit</td>
-            <td>
-                <select ng-model="application.clientInfo.aimOfVisit" ng-options="a as a for a in aims"></select >
-            </td>
-        </tr>
-        <tr>
-            <td>Passport Number</td>
-            <td><input ng-model="application.clientInfo.passport.number"/></td>
-        </tr>
-        <tr>
-            <td>Country Of Residence</td>
-            <td><input ng-model="application.clientInfo.passport.countryOfResidence"/></td>
-        </tr>
-        <tr>
-            <td>Date of Receiving</td>
-            <td><input ng-model="application.clientInfo.passport.dateOfReceiving" type="date"/></td>
-        </tr>
-        <tr>
-            <td>Date of Ending</td>
-            <td><input ng-model="application.clientInfo.passport.dateOfEnding" type="date"/></td>
-        </tr>
-        <tr>
-            <td>Number of days</td>
-            <td><input ng-model="application.visaInfo.numOfDaysResidence" type="number"/></td>
-        </tr>
-        <tr>
-            <td>Date from</td>
-            <td><input ng-model="application.visaInfo.dateFrom" type="date"/></td>
-        </tr>
-        <tr>
-            <td>Date to</td>
-            <td><input ng-model="application.visaInfo.dateTo" type="date"/></td>
-        </tr>
-        <tr>
-            <td>Photo path</td>
-            <td><input ng-model="application.clientInfo.photoPath" type="text"/></td>
-        </tr>
-        <!--<tr ng-show="infoBool" ng-repeat="document_type in chosenVisa.requiredDocumentTypes">-->
-            <!--<td>-->
-                <!--{{document_type.name}} path-->
-            <!--</td>-->
-            <!--<td><input ng-model="documents" type="text"/></td>-->
-        <!--</tr>-->
-    </table>
-    <input ng-show="infoBool" type="submit"/>
-    <h3 ng-show="messageBool">{{errorMessage}}</h3>
-    <h3 ng-repeat="error in errors" ng-show="messageBool">{{error}}</h3>
+            </div>
+
+            <div class="col-4">
+                <label class="label_margin" for="inlineFormCustomSelectAim">Aim of visit:</label>
+                <select ng-model="application.clientInfo.aimOfVisit" ng-options="a as a for a in aims"  class="custom-select margin_app" id="inlineFormCustomSelectAim">
+                </select >
+            </div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row col-10">
+            <div class="col-4">
+                <label class="label_margin" for="name">Name:</label>
+                <input ng-model="application.clientInfo.name" type="text" class="form-control" placeholder="First name" id="name">
+            </div>
+            <div class="col-4">
+                <label class="label_margin" for="surname">Surname:</label>
+                <input ng-model="application.clientInfo.surname" type="text" class="form-control" placeholder="Last name" id="surname">
+            </div>
+            <div class="col-4">
+                <label class="label_margin" for="phone">Phone number:</label>
+                <input ng-model="application.clientInfo.phoneNumber" type="number" class="form-control" placeholder="Phone number" id="phone">
+            </div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row col-10">
+            <div class="col-4">
+                <label class="label_margin" for="passportNumber">Passport number:</label>
+                <input ng-model="application.clientInfo.passport.number"  type="text"  class="form-control" placeholder="Passport number" id="passportNumber"/>
+            </div>
+            <div class="col-4">
+                <label class="label_margin" for="countryResidence">Country of residence:</label>
+                <input ng-model="application.clientInfo.passport.countryOfResidence" type="text" class="form-control" placeholder="Country of residence" id="countryResidence">
+            </div>
+            <div class="col-4">
+                <label class="label_margin" for="photo">Link to photo:</label>
+                <input ng-model="application.clientInfo.photoPath" type="text" class="form-control" placeholder="Link to photo" id="photo">
+            </div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row col-10">
+            <div class="col-4">
+                <label class="label_margin" for="dateBirth">Date of Birth:</label>
+                <input ng-model="application.clientInfo.dateOfBirth" type="date" class="form-control" id="dateBirth">
+            </div>
+            <div class="col-4">
+                <label class="label_margin" for="dateRec">Date of passport receiving:</label>
+                <input ng-model="application.clientInfo.passport.dateOfReceiving"  type="date" class="form-control" id="dateRec">
+            </div>
+            <div class="col-4">
+                <label class="label_margin" for="dateEnd">Date of passport ending:</label>
+                <input ng-model="application.clientInfo.passport.dateOfEnding"  type="date"  class="form-control" id="dateEnd"/>
+            </div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row col-10">
+            <div class="col-4">
+                <label class="label_margin" for="dateFrom">Visa from:</label>
+                <input ng-model="application.visaInfo.dateFrom"  type="date" class="form-control" id="dateFrom">
+            </div>
+            <div class="col-4">
+                <label class="label_margin" for="dateTo">Visa to:</label>
+                <input ng-model="application.visaInfo.dateTo"  type="date" class="form-control" id="dateTo">
+            </div>
+            <div class="col-2">
+                <label class="label_margin" for="sex">Sex:</label>
+                <div id="sex" class="sex">
+                <label class="radio-inline"><input ng-model="application.clientInfo.sex" type="radio" value="M"/>Men</label>
+                <label class="radio-inline"><input ng-model="application.clientInfo.sex" type="radio" value="W"/>Women</label>
+                </div>
+            </div>
+            <div class="col-2">
+                <label class="label_margin" for="dateTo">Days:</label>
+                <input ng-model="application.visaInfo.numOfDaysResidence" type="number"  class="form-control" placeholder="days of residence">
+            </div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row col-10">
+            <button  class="btn btn-success offset-9 col-3" type="submit">Add</button>
+        </div>
+    </div>
+
+    <br/>
+
+    <div class="row col-10 justify-content-center">
+        <div ng-show="messageBool" class="col-4 offset-4">
+            <strong class="alert alert-danger">{{errorMessage}}</strong>
+        </div>
+    </div>
+
+    <br/>
+
+    <div class="row justify-content-center">
+        <div class="row col-10 ">
+            <div  ng-repeat="error in validationErrors" ng-show="messageBool" class="alert alert-danger col-4" role="alert">
+                {{error}}
+            </div>
+        </div>
+    </div>
 
 </form>
 </body>
