--- a/OnlineVisaCenter/src/main/webapp/employee_page.html
+++ b/OnlineVisaCenter/src/main/webapp/employee_page.html
@@ -5,17 +5,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 <script src="application_controller.js"></script>
 <body>
-<a href="applications.html">View applications</a><br/>
-<br/>
-<a href="countries.html">Manage countries</a><br/>
-<br/>
-<a href="document_types.html">Manage documents</a><br/>
-<br/>
-<a href="visas.html">Manage visas</a><br/>
-<br/>
-<br/>
-<div ng-controller="application_controller" data-ng-init="getStatuses()">
-    <button ng-click="LogOut()" >Log out</button>
-</div>
+<div ng-include="'employee_navbar.html'"></div>
 </body>
 </html>
