--- a/OnlineVisaCenter/src/main/webapp/registration.html
+++ b/OnlineVisaCenter/src/main/webapp/registration.html
@@ -1,30 +1,73 @@
 <html ng-app="visa_center">
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="application_controller.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <title>Registration</title>
 </head>
 <body>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<script src="application_controller.js"></script>
-<div ng-controller="application_controller">
-<form ng-submit="regUser(user)">
-    <table style="with: 50%">
-        <tr>
-            <td>Login</td>
-            <td><input ng-model ="user.login" /></td>
-        </tr>
-        <tr>
-            <td>email</td>
-            <td><input ng-model="user.email" /></td>
-        </tr>
-        <tr>
-            <td>Password</td>
-            <td><input ng-model="user.password" /></td>
-        </tr>
-    </table>
-    <input type="submit"/>
-    <h3 ng-show="messageBool">{{errorMessage}}</h3>
-    <h3 ng-repeat="error in errors" ng-show="messageBool">{{error}}</h3>
-</form>
+<div class="container">
+    <div class="row main">
+        <div class="panel-heading">
+            <div class="panel-title text-center">
+                <h1 class="title">Visa Center</h1>
+                <hr />
+            </div>
+        </div>
+        <div class="main-login main-center" ng-controller="application_controller">
+            <form class="form-horizontal" ng-submit="regUser(user)">
+
+                <div class="form-group">
+                    <label for="name" class="cols-sm-2 control-label">Your Login</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                            <input ng-model ="user.login" required type="text" class="form-control" name="name" id="name"  placeholder="Enter your Login"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="email" class="cols-sm-2 control-label">Your Email</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+                            <input ng-model="user.email" required type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="password" class="cols-sm-2 control-label">Password</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                            <input ng-model="user.password" required type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" class="btn btn-primary btn-lg btn-block login-button"/>
+                </div>
+                <div class="login-register">
+                    <a href="login_page.html">Login</a>
+                </div>
+            </form>
+
+            <div ng-show="messageBool"  class="alert alert-danger">
+                <strong >{{errorMessage}}</strong>
+            </div>
+
+            <div  ng-repeat="error in validationErrors" ng-show="messageBool"  class="alert alert-danger" role="alert">
+                {{error}}
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
